
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int uint64_t ;
typedef int recipes ;
struct TYPE_2__ {int content_size; int command; int key; } ;
typedef TYPE_1__ mach_voucher_attr_recipe_data_t ;
typedef int mach_voucher_attr_raw_recipe_array_t ;
typedef scalar_t__ mach_port_t ;
typedef scalar_t__ kern_return_t ;


 scalar_t__ KERN_SUCCESS ;
 scalar_t__ MACH_PORT_NULL ;
 int MACH_VOUCHER_ATTR_KEY_USER_DATA ;
 int MACH_VOUCHER_ATTR_USER_DATA_STORE ;
 int assert (int) ;
 int getpid () ;
 scalar_t__ host ;
 scalar_t__ host_create_mach_voucher (scalar_t__,int ,int,scalar_t__*) ;

__attribute__((used)) static mach_port_t
create_voucher(uint64_t id) {
 assert(host != MACH_PORT_NULL);
 mach_port_t voucher = MACH_PORT_NULL;
#pragma clang diagnostic push
#pragma clang diagnostic ignored "-Wgnu-variable-sized-type-not-at-end"
 struct __attribute__((packed)) {
  mach_voucher_attr_recipe_data_t user_data_recipe;
  uint64_t user_data_content[2];
 } recipes = {};
#pragma clang diagnostic pop
 recipes.user_data_recipe.key = MACH_VOUCHER_ATTR_KEY_USER_DATA;
 recipes.user_data_recipe.command = MACH_VOUCHER_ATTR_USER_DATA_STORE;
 recipes.user_data_recipe.content_size = sizeof(recipes.user_data_content);
 recipes.user_data_content[0] = getpid();
 recipes.user_data_content[1] = id;
 kern_return_t kr = host_create_mach_voucher(
   host,
   (mach_voucher_attr_raw_recipe_array_t) &recipes,
   sizeof(recipes),
   &voucher);
 assert(kr == KERN_SUCCESS);
 assert(voucher != MACH_PORT_NULL);
 return voucher;
}
